--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>共通テスト地理 攻略トレーナー</title>
   </head>
-  <body class="bg-slate-50">
+  <body>
     <div id="root"></div>
+    <!-- ここで React アプリを起動します -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
