--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>共通テスト地理 攻略トレーナー</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>地理攻略トレーナー</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- ここで React アプリを起動します -->
+    <!-- ここが超重要：Vite で React を起動する -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
